--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="header">
         <nav>
             <h2 class="logo">E<span id="cont2">A</span>.</h2>
-            <ul>
+            <ul id="sidemenu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
-            <i class="fas fa-bars"></i>
-            <a href="#" class="btn">Subscribe</a>
+            <i class="fas fa-bars" onclick="openmenu()"></i>
+            <a href="#" class="btn btn-center">Subscribe</a>
             
         </nav>
 
@@ -48,7 +48,7 @@
             <div class="col2">
                 <h1 class"title">About Me</h1>
                 <!-- <h4>Developer & Designer</h4> -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <p>Lorem ipsum dolor sit amet consectetur adigitpisicing elit.
                     Sunt adipisci voluptatum tempora, voluptates vel, ipsa 
                     a ipsam natus saepe deleniti, pariatur quaerat non odit 
                     numquam sed magnam. Totam nihil asperiores eos magnam 
