--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright aedesigns</p>
+        <p>Copyright ea</p>
     </div>
 </div>
 </body>
